--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h2>now i am using github</h2>
     <h1>changing programme,don,t be confused</h1>
+    <img src="download jpg" alt="">
 </body>
 </html>
