--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h2>now i am using github</h2>
     <h1>changing programme,don,t be confused</h1>
     <img src="download.jpg" alt="">
+    <p>changing branch and i gather new idea</p>
+    <p>koto jhamala,birokto lage</p>
 </body>
 </html>
